[gd_scene load_steps=2 format=3 uid="uid://o0t332ocm63l"]

[ext_resource type="Script" path="res://scenes/gui/main_menu.gd" id="1_iwhld"]

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iwhld")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -164.5
offset_top = 14.0
offset_right = 164.5
offset_bottom = 151.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 48
text = "TITLE
BOTTOM TEXT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="btn_start" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -101.0
offset_top = -352.0
offset_right = 101.0
offset_bottom = -312.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label2" type="Label" parent="btn_start"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -30.0
offset_right = 100.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "START
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="btn_options" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -87.5
offset_top = -278.0
offset_right = 87.5
offset_bottom = -238.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label4" type="Label" parent="btn_options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -30.0
offset_right = 100.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "OPTIONS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="btn_quit" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -200.0
offset_right = 100.0
offset_bottom = -163.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label3" type="Label" parent="btn_quit"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -30.0
offset_right = 100.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "QUIT
"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="btn_start" to="." method="_on_btn_start_pressed"]
[connection signal="pressed" from="btn_options" to="." method="_on_btn_options_pressed"]
[connection signal="pressed" from="btn_quit" to="." method="_on_btn_quit_pressed"]
